--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ lazy_static = "1.4.0"
 itertools = "0.10.1"
 log = "0.4"
 env_logger = "0.8.4"    # makes sense when used with binaries. with libs, just use log crate
+dirs = "4.0"
