--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ itertools = "0.10.1"
 log = "0.4"
 env_logger = "0.8.4"    # makes sense when used with binaries. with libs, just use log crate
 dirs = "4.0"
+log-derive = "0.3"
